--- a/.github/workflows/ci_linux_autobuild.yml
+++ b/.github/workflows/ci_linux_autobuild.yml
@@ -2,6 +2,7 @@ name: ci_linux_autobuild
 env:
   FC: gfortran
   CC: gcc
+  CMAKE_GENERATOR: Ninja
 
 on:
   push:
@@ -20,6 +21,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+
+    - run: python -m pip install ninja
 
     - name: build and test without MPI
       run: ctest -S setup.cmake -R unit -VV
@@ -41,6 +44,7 @@ jobs:
       run: |
         sudo apt update -yq
         sudo apt install -yq --no-install-recommends gfortran libopenmpi-dev
+        python -m pip install ninja
 
     - run: ctest -S setup.cmake -R unit -VV
 
