--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -44,7 +44,41 @@ set_tests_properties(unit:compiler_vendor PROPERTIES PASS_REGULAR_EXPRESSION ${C
 endif()
 
 # --- io
-add_library(io OBJECT io.f90 output.f90
+# log the Git revision information for reproducibility
+# we stripe this into output.f90.
+find_package(Git)
+
+set(_max_len 80) # arbitrary limit, so as not to exceed maximum 132 character Fortran line length.
+
+set(git_version ${GIT_VERSION_STRING})
+string(SUBSTRING ${git_version} 0 ${_max_len} git_version)
+if(GIT_FOUND)
+
+# git branch --show-current requires Git >= 2.22, June 2019
+execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
+OUTPUT_VARIABLE git_branch OUTPUT_STRIP_TRAILING_WHITESPACE)
+string(SUBSTRING ${git_branch} 0 ${_max_len} git_branch)
+
+execute_process(COMMAND ${GIT_EXECUTABLE} describe --all --tags
+OUTPUT_VARIABLE git_rev OUTPUT_STRIP_TRAILING_WHITESPACE)
+string(SUBSTRING ${git_rev} 0 ${_max_len} git_rev)
+
+set(git_porcelain .true.)
+execute_process(COMMAND ${GIT_EXECUTABLE} status --porcelain
+OUTPUT_VARIABLE _porcelain OUTPUT_STRIP_TRAILING_WHITESPACE)
+if(_porcelain)
+  set(git_porcelain .false.)
+endif(_porcelain)
+else()
+set(git_branch)
+set(git_rev)
+set(git_porcelain .false.)
+endif()
+
+message(STATUS "${PROJECT_NAME}  git revision: ${git_rev}  git_branch: ${git_branch}  git_porcelain: ${git_porcelain}")
+
+configure_file(output.in.f90 output.f90 @ONLY)
+add_library(io OBJECT io.f90 ${CMAKE_CURRENT_BINARY_DIR}/output.f90
   aurora.f90 aurora_raw.f90 aurora_hdf5.f90 aurora_ncdf.f90
   mag.f90 mag_hdf5.f90 mag_ncdf.f90 mag_raw.f90
   plasma_input.f90 plasma_input_hdf5.f90 plasma_input_ncdf.f90 plasma_input_raw.f90
