--- a/src/numerical/CMakeLists.txt
+++ b/src/numerical/CMakeLists.txt
@@ -1,5 +1,5 @@
 # --- generate constants
-configure_file(constants/phys_consts.in.f90 phys_consts.f90)
+configure_file(constants/phys_consts.in.f90 phys_consts.f90 @ONLY)
 add_library(const OBJECT ${CMAKE_CURRENT_BINARY_DIR}/phys_consts.f90)
 
 # --- interpolation
@@ -9,7 +9,7 @@ add_subdirectory(interpolation)
 add_subdirectory(grid)
 
 # --- calculus
-configure_file(calculus/calculus.in.f90 calculus.f90)
+configure_file(calculus/calculus.in.f90 calculus.f90 @ONLY)
 add_library(calculus OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
 target_link_libraries(calculus PRIVATE mesh)
