--- a/src/numerical/potential/CMakeLists.txt
+++ b/src/numerical/potential/CMakeLists.txt
@@ -29,7 +29,8 @@ add_test(NAME unit:potential2
   COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} $<TARGET_FILE:test_potential2d> ${_potential_testfile}
   WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
 set_tests_properties(unit:potential2 PROPERTIES TIMEOUT 30
-  FIXTURES_SETUP GemPot)
+  FIXTURES_SETUP GemPot
+  RESOURCE_LOCK cpu_mpi)
 
 if(python_ok)
   add_test(NAME unit:potential2:python
