--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -5,7 +5,8 @@ COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMP
 
 set_tests_properties(unit:mpi_basic PROPERTIES
 TIMEOUT 15
-FIXTURES_SETUP mpi_fixture)
+FIXTURES_SETUP mpi_fixture
+RESOURCE_LOCK cpu_mpi)
 
 # --- SCALAPACK
 
