--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -17,9 +17,9 @@ elseif("s" IN_LIST arith)
 endif()
 configure_file(test_scalapack.in.f90 test_scalapack.f90 @ONLY)
 add_executable(gemini_scalapack ${CMAKE_CURRENT_BINARY_DIR}/test_scalapack.f90)
-target_link_libraries(gemini_scalapack SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
+target_link_libraries(gemini_scalapack PRIVATE SCALAPACK::SCALAPACK MPI::MPI_Fortran)
 
-add_test(NAME unit:scalapack COMMAND gemini_scalapack)
+add_test(NAME unit:scalapack COMMAND $<TARGET_FILE:gemini_scalapack>)
 set_tests_properties(unit:scalapack PROPERTIES
 TIMEOUT 15
 FIXTURES_REQUIRED mpi_fixture
@@ -27,7 +27,7 @@ FIXTURES_SETUP scalapack_fixture)
 
 # --- MUMPS
 add_executable(test_mumps test_mumps.f90)
-target_link_libraries(test_mumps mumps_interface SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
+target_link_libraries(test_mumps PRIVATE mumps_interface MPI::MPI_Fortran)
 
 add_test(NAME unit:mumps_basic
 COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
