remove unused code. Let CMake know number of processors used

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -5,6 +5,7 @@ COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMP
 
 set_tests_properties(unit:mpi_basic PROPERTIES
 TIMEOUT 15
+PROCESSORS ${MPIEXEC_MAX_NUMPROCS}
 FIXTURES_SETUP mpi_fixture
 RESOURCE_LOCK cpu_mpi)
 
@@ -36,7 +37,7 @@ WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 set_tests_properties(unit:mumps_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS 2
-SKIP_RETURN_CODE 77
 RESOURCE_LOCK cpu_mpi
+REQUIRED_FILES ${CMAKE_CURRENT_SOURCE_DIR}/input_simpletest_real.nml
 FIXTURES_REQUIRED scalapack_fixture
 FIXTURES_SETUP mumps_fixture)
