--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         update: true
-        install: 'git mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja mingw-w64-x86_64-gcc-fortran mingw-w64-x86_64-hdf5 mingw-w64-x86_64-lapack'
+        install: 'git mingw-w64-x86_64-cmake mingw-w64-x86_64-ninja mingw-w64-x86_64-gcc-fortran mingw-w64-x86_64-hdf5 mingw-w64-x86_64-lapack mingw-w64-x86_64-python-h5py mingw-w64-x86_64-python-scipy'
 
     - uses: actions/checkout@v2
 
