ci: macos: use better defaults

--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -1,6 +1,5 @@
 name: ci_macos
 env:
-  FC: gfortran-10
   CMAKE_GENERATOR: Ninja
 
 on:
@@ -13,14 +12,14 @@ on:
 jobs:
 
   hdf5:
-    runs-on: macos-11.0
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: '3.8'
 
-    - run: brew install gcc pkg-config ninja lapack open-mpi hdf5 scalapack
+    - run: brew install gcc ninja lapack open-mpi hdf5 scalapack
 
 # CI is too slow for 3d_glow
 
@@ -32,7 +31,7 @@ jobs:
         name: MacOS_CMake_Unit_log
         path: build/CMakeFiles/CMakeError.log
 
-    - run: ctest -E 3d -V
+    - run: ctest -E 3d --parallel 2 -V
       working-directory: build
 
   no_mpi:
@@ -47,7 +46,6 @@ jobs:
 
     - run: brew install gcc ninja lapack hdf5
 
-# CI is too slow for 3d_glow
     - name: build and test without MPI
       run: ctest -S setup.cmake -R unit -VV
 
@@ -58,5 +56,5 @@ jobs:
         path: build/CMakeFiles/CMakeError.log
 
     - name: 2D test without MPI
-      run: ctest -R 2dew_fang -V
+      run: ctest -R 2dew_fang --parallel 2 -V
       working-directory: build
