--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -13,6 +13,7 @@ jobs:
 
   hdf5:
     runs-on: macos-latest
+    timeout-minutes: 10
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -37,6 +38,7 @@ jobs:
   no_mpi:
     needs: hdf5
     runs-on: macos-latest
+    timeout-minutes: 5
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
