--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -13,6 +13,7 @@ on:
 jobs:
 
   no_mpi:
+    timeout-minutes: 15
     runs-on: windows-latest
     defaults:
       run:
@@ -34,3 +35,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - run: ctest -S setup.cmake -E 3d -VV
+      timeout-minutes: 10
