add stub for -Dhwm14=on HWM14 (not yet implemented)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,11 +8,16 @@ endforeach()
 
 endfunction(set_targ_props)
 
-# --- MSISE00 and MSIS 2.0
+# --- MSISE00 or MSIS 2.0
 add_subdirectory(vendor/msis00)
 if(msis20)
-  # provides gtd8()
+  # provides gtd8() subroutine
   include(${PROJECT_SOURCE_DIR}/cmake/msis2.cmake)
+endif()
+
+# --- HWM14
+if(hwm14)
+  include(${PROJECT_SOURCE_DIR}/cmake/hwm14.cmake)
 endif()
 
 # --- just use one function from LAPACK95
